Set up single work item template

--- a/assets/sass/_1200up.scss
+++ b/assets/sass/_1200up.scss
@@ -31,3 +31,10 @@ Home Page
 .tst-text {
 	padding: 0 10%;
 }
+
+/*--------------------------------------------------------------
+Work Single
+--------------------------------------------------------------*/
+.work-thumb-large {
+	height: 725px;
+}
