--- a/assets/sass/_992up.scss
+++ b/assets/sass/_992up.scss
@@ -31,3 +31,10 @@ Home Page
 .work-thumb {
 	height: 250px;
 }
+
+/*--------------------------------------------------------------
+Work Single
+--------------------------------------------------------------*/
+.work-thumb-large {
+	height: 650px;
+}
