--- a/assets/sass/_768up.scss
+++ b/assets/sass/_768up.scss
@@ -64,7 +64,7 @@ Header
 	}
 }
 .site-header {
-	&.accent {
+	&.contrast {
 		.main-navigation {
 			li {
 				color: white;
@@ -148,4 +148,12 @@ Work Page
 	&:nth-of-type(3n+4) {
 		clear: left;
 	}
+}
+
+/*--------------------------------------------------------------
+Work Single
+--------------------------------------------------------------*/
+.work-thumb-large {
+	height: 575px;
+	margin-bottom: 30px;
 }
