Updated contact section in header

--- a/assets/sass/_1200up.scss
+++ b/assets/sass/_1200up.scss
@@ -3,6 +3,20 @@
 --------------------------------------------------------------*/
 
 /*--------------------------------------------------------------
+Header
+--------------------------------------------------------------*/
+/* Contact */
+.site-contact {
+	.text-phone {
+		display: inline;
+	}
+	.icon-phone,
+	.icon-email {
+		display: none;
+	}
+}
+
+/*--------------------------------------------------------------
 Home Page
 --------------------------------------------------------------*/
 
