--- a/assets/sass/_768up.scss
+++ b/assets/sass/_768up.scss
@@ -32,7 +32,7 @@ Header
 	float: left;
 }
 .site-branding {
-	margin-right: 3.75em;
+	margin-right: 3.0em;
 	margin-bottom: 0;
 }
 
@@ -46,11 +46,11 @@ Header
 	li {
 		color: $link-color;
 		padding-left: 0;
-		padding-right: 1.0em;
+		padding-right: 0.75em;
 		&:after {
 			content: '/';
 			display: inline;
-			padding-left: 1.0em;
+			padding-left: 0.75em;
 		}
 		&:last-of-type {
 			&:after {
@@ -77,6 +77,16 @@ Header
 .site-contact {
 	display: block;
 	float: right;
+	.text-phone {
+		display: none;
+	}
+	.icon-phone,
+	.icon-email {
+		font-size: 24px;
+		font-size: 2.4rem;
+		line-height: 1.0;
+		@include antialiased;
+	}
 }
 
 /*--------------------------------------------------------------
