--- a/assets/sass/_992up.scss
+++ b/assets/sass/_992up.scss
@@ -3,6 +3,25 @@
 --------------------------------------------------------------*/
 
 /*--------------------------------------------------------------
+Header
+--------------------------------------------------------------*/
+.site-header {
+}
+.site-branding {
+	margin-right: 3.5em;
+}
+
+/* Navigation */
+.main-navigation {
+	li {
+		padding-right: 1.0em;
+		&:after {
+			padding-left: 1.0em;
+		}
+	}
+}
+
+/*--------------------------------------------------------------
 Home Page
 --------------------------------------------------------------*/
 .section {
