--- a/assets/sass/_mixins.scss
+++ b/assets/sass/_mixins.scss
@@ -36,18 +36,35 @@ $pill-color: lighten($body-light, 20%);
 $section-bg: lighten($border-light, 9%);
 
 /* Social */
+$gplus: #D4452A;
 $facebook: #3C599B;
+$linkedin: #0077B5;
+$pinterest: #BD081C;
 $twitter: #5EA9DD;
 
 /*--------------------------------------------------------------
 Effects
 --------------------------------------------------------------*/
 /* Transitions */
-@mixin animate($time: .25s) {
+@mixin animated($time: .25s) {
 	-webkit-transition: all $time linear;
 	-moz-transition: all $time linear;
 	-o-transition: all $time linear;
 	transition: all $time linear;
+}
+@mixin image_lighten($opacity: 0.75) {
+	&:hover {
+		opacity: $opacity;
+		@include animated;
+	}
+}
+
+/* Gradient */
+@mixin ecm_gradient($top, $bottom) {
+	background: -webkit-linear-gradient($top, $bottom);
+	background: -moz-linear-gradient($top, $bottom);
+	background: -o-linear-gradient($top, $bottom);
+	background: linear-gradient($top, $bottom);
 }
 
 /* Shadows */
@@ -69,7 +86,7 @@ Effects
 }
 
 /* Positioning */
-@mixin flip-horiz {
+@mixin flip_horiz {
 	-moz-transform: scaleX(-1);
 	-o-transform: scaleX(-1);
 	-webkit-transform: scaleX(-1);
