Updated more work section and cleaned up mobile styles

--- a/assets/sass/_768up.scss
+++ b/assets/sass/_768up.scss
@@ -68,7 +68,6 @@ Header
 /*--------------------------------------------------------------
 Global
 --------------------------------------------------------------*/
-
 /* Utility */
 .full-height_desktop {
 	position: relative;
@@ -84,12 +83,18 @@ Global
 }
 
 /*--------------------------------------------------------------
+Content
+--------------------------------------------------------------*/
+.page-title {
+	text-align: left;
+}
+
+/*--------------------------------------------------------------
 Home Page
 --------------------------------------------------------------*/
 .section {
 	padding: 56px 0;
 }
-
 
 /* Hero */
 .hero-section {
@@ -117,6 +122,12 @@ Home Page
 /*--------------------------------------------------------------
 About Page
 --------------------------------------------------------------*/
+.about-page {
+	h1 {
+		font-size: 64px;
+		font-size: 6.4rem;
+	}
+}
 /* Slider */
 .slider__arrows {
 	display: block;
@@ -160,10 +171,4 @@ Work Single
 .work-thumb-large {
 	height: 405px;
 	margin-bottom: 30px;
-}
-
-/*--------------------------------------------------------------
-Footer
---------------------------------------------------------------*/
-.site-footer {
 }
