--- a/assets/sass/_mobile.scss
+++ b/assets/sass/_mobile.scss
@@ -9,7 +9,7 @@ Header
 	position: relative;
 	z-index: 999;
 	text-align: center;
-	padding: 1.5em 0 1.25em;
+	padding: 1.75em 0 1.5em;
 	border-bottom: 1px solid lighten($border-light, 5%);
 	span {
 		color: $link-color;
@@ -34,7 +34,7 @@ Header
 	display: block;
 }
 .site-branding {
-	margin: 0 0 1.25em;
+	margin: 0 0 2.0em;
 }
 
 /* Navigation */
@@ -42,7 +42,7 @@ Header
 	text-align: center;
 	li {
 		display: inline;
-		padding: 0 0.5em;
+		padding: 0 0.475em;
 	}
 	a {
 		display: inline-block;
@@ -60,7 +60,6 @@ Header
 /*--------------------------------------------------------------
 Global
 --------------------------------------------------------------*/
-
 /* Utility */
 .full-height {
 	position: relative;
@@ -152,6 +151,13 @@ Global
 	}
 }
 
+/* Admin bar */
+.ab-top-menu {
+	#wp-admin-bar-search {
+		display: none !important;
+	}
+}
+
 /*--------------------------------------------------------------
 Content
 --------------------------------------------------------------*/
@@ -162,6 +168,9 @@ Content
 .page-title {
 	margin: 0 0 1.0em;
 	font-weight: 400;
+}
+.page-title {
+	text-align: center;
 }
 .page-header {
 	margin: 0;
@@ -190,8 +199,12 @@ Blog
 	}
 }
 .comments-area {
+	overflow: hidden;
 	.logged-in-as {
 		font-weight: 300;
+	}
+	.comment-reply-title {
+		margin-top: 0.5em;
 	}
 	.comment-form-comment {
 		margin-bottom: 0.75em;
@@ -399,7 +412,7 @@ Home Page
 %work-thumb {
 	margin-bottom: 15px;
 	display: block;
-	height: 375px;
+	height: 300px;
 	background-position: 50% 50%;
 	background-size: cover;
 }
@@ -478,12 +491,16 @@ About Page
 		padding-bottom: 0;
 	}
 	h1 {
-		margin: 0 0 0.5em;
-		font-size: 4.0em;
+		margin: 0 0 0.75em;
+		font-size: 48px;
+		font-size: 4.8rem;
 		font-weight: 300;
 	}
-	.entry-content p {
-		line-height: 1.75em;
+	.entry-content {
+		margin-top: 0;
+		p {
+			line-height: 1.75em;
+		}
 	}
 }
 /* Slider */
@@ -494,6 +511,7 @@ About Page
 		list-style-type: none;
 	}
 	img {
+		display: block;
 		max-width: 100%;
 		min-width: 100%;
 	}
@@ -598,6 +616,9 @@ Contact Page
 }
 .contact-area {
 	padding-top: 1.5em;
+}
+.contact-form {
+	margin-bottom: 3.0em;
 }
 
 /* Forms */
@@ -714,10 +735,16 @@ Work Page
 Work Single
 --------------------------------------------------------------*/
 .work-thumb-area {
+	padding-top: 0.75em;
 	margin-bottom: 2.5em;
 }
 .work-thumb-large {
 	@extend %work-thumb;
+}
+.post-navigation {
+	padding: 0.5em 0;
+	border-top: 1px dotted $border-light;
+	border-bottom: 1px dotted $border-light;
 }
 .share-area {
 	margin-bottom: 2.0em;
@@ -732,8 +759,8 @@ Work Single
 		color: lighten($body-light, 10%);
 	}
 	a {
-		font-size: 24px;
-		font-size: 2.4rem;
+		font-size: 32px;
+		font-size: 3.2rem;
 		width: 1.125em;
 		&.facebook {
 			color: $facebook;
@@ -784,8 +811,6 @@ Footer
 	color: white;
 	padding: 4.5em 0 4.0em;
 	text-align: center;
-	font-size: 14px;
-	font-size: 1.4rem;
 	@include ecm_gradient($link-color, darken($link-color, 4%));
 	a {
 		color: white;
@@ -800,15 +825,13 @@ Footer
 		color: $border-dark !important;
 	}
 }
-.footer-info {
-}
 .info-block {
 	font-weight: 300;
 	margin-bottom: 2.5em;
 	h4 {
 		margin-top: 0;
-		font-size: 12px;
-		font-size: 1.2rem;
+		font-size: 14px;
+		font-size: 1.4rem;
 		text-transform: uppercase;
 		color: $border-dark;
 	}
@@ -836,8 +859,8 @@ Footer
 	a {
 		display: inline-block;
 		padding: 0 0.25em;
-		font-size: 16px;
-		font-size: 1.6rem;
+		font-size: 20px;
+		font-size: 2.0rem;
 		vertical-align: middle;
 		&.facebook:hover {
 			color: $facebook;
@@ -854,8 +877,8 @@ Footer
 	}
 }
 .link-small {
-	font-size: 12px;
-	font-size: 1.2rem;
+	font-size: 14px;
+	font-size: 1.4rem;
 	font-weight: 300;
 	&:hover {
 		text-decoration: underline;
@@ -866,14 +889,4 @@ Footer
 .footer-nav,
 .footer-social {
 	display: none;
-}
-
-
-/*--------------------------------------------------------------
-Admin bar
---------------------------------------------------------------*/
-.ab-top-menu {
-	#wp-admin-bar-search {
-		display: none !important;
-	}
 }
