--- a/assets/sass/_base.scss
+++ b/assets/sass/_base.scss
@@ -137,7 +137,8 @@ Menus
 
 .site-main .comment-navigation,
 .site-main .paging-navigation,
-.site-main .post-navigation {
+.site-main .post-navigation,
+.single-work_item .post-navigation {
 	margin: 0 0 1.5em;
 	overflow: hidden;
 }
