--- a/assets/sass/_mobile.scss
+++ b/assets/sass/_mobile.scss
@@ -544,15 +544,13 @@ About Page
 }
 /* Slider */
 .about-slider {
-	padding-top: 20px;
 	ul {
 		padding: 0;
 		list-style-type: none;
 	}
 	img {
 		display: block;
-		max-width: 100%;
-		min-width: 100%;
+		width: 100%;
 	}
 }
 .slider__arrows {
