--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -5,7 +5,7 @@
 /*--------------------------------------------------------------
 Imports
 --------------------------------------------------------------*/
-@import "bootstrap/_bootstrap";
+@import "_bootstrap";
 @import "_mixins";
 @import "_fonts";
 @import "_base";
