Removed slider from about page template

--- a/assets/sass/_768up.scss
+++ b/assets/sass/_768up.scss
@@ -86,6 +86,11 @@ Global
 	}
 }
 
+/* Image Areas */
+.feat-img-area {
+	height: 375px;
+}
+
 /*--------------------------------------------------------------
 Content
 --------------------------------------------------------------*/
