--- a/assets/sass/_992up.scss
+++ b/assets/sass/_992up.scss
@@ -22,6 +22,14 @@ Header
 }
 
 /*--------------------------------------------------------------
+Global
+--------------------------------------------------------------*/
+/* Image Areas */
+.feat-img-area {
+	height: 450px;
+}
+
+/*--------------------------------------------------------------
 Home Page
 --------------------------------------------------------------*/
 .section {
