--- a/assets/sass/_base.scss
+++ b/assets/sass/_base.scss
@@ -11,7 +11,7 @@ input,
 select,
 textarea {
 	color: $body-color;
-	font-family: $sans-serif;
+	font-family: $body-font;
 	font-size: 16px;
 	font-size: 1.6rem;
 	line-height: 1.75;
@@ -19,6 +19,7 @@ textarea {
 
 h1, h2, h3, h4 {
 	@include antialiased;
+	font-family: $heading-font;
 }
 
 p {
@@ -27,7 +28,7 @@ p {
 
 b,
 strong {
-	font-weight: 700;
+	font-weight: 600;
 }
 
 div:focus {
@@ -48,7 +49,7 @@ Forms
 input[type="search"],
 input[type="submit"],
 button {
-	border: 1px solid $border-light;
+	border: 1px solid $border-color;
 	padding: 0.175em 0.35em;
 }
 input[type="search"] {
@@ -58,7 +59,7 @@ input[type="search"] {
 input[type="submit"],
 button {
 	-webkit-appearance: button;
-	background-color: lighten($border-light, 6.5%);
+	background-color: lighten($border-color, 6.5%);
 	color: lighten($body-color, 20%);
 }
 textarea {
