--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -3,9 +3,13 @@
 --------------------------------------------------------------*/
 
 /*--------------------------------------------------------------
-Imports
+Bootstrap
 --------------------------------------------------------------*/
-@import "_bootstrap";
+@import "bootstrap/_bootstrap";
+
+/*--------------------------------------------------------------
+Base
+--------------------------------------------------------------*/
 @import "_mixins";
 @import "_fonts";
 @import "_base";
